# CommunityMech

./: .gitignore  CLAUDE.md  COMMUNITY_MECH_PLAN.md  LICENSE  QUICK_START.md  README.md  evidence_curation_report.txt  justfile  pyproject.toml
.claude/skills/: .gitkeep
app/: index.html
app/communities/: AMD_Nitrososphaerota_Archaeal.html  Australian_Lead_Zinc_Polymetallic.html  (+28 more)
conf/: oak_config.yaml
docs/: AUTOMATION_TOOLS.md  CURATION_PROGRESS_REPORT.md  index.html  pdf_fetching_capability.md
references_cache/: DOI_10.1093_ismejo_wrae209.md  DOI_10.1101_2024.03.28.587009.md  DOI_10.1126_sciadv.adg7888.md  DOI_10.3389_fcimb.2022.925215.md  PMID_29979655.md  PMID_30254121.md  PMID_33398099.md  PMID_33995895.md  PMID_40349173.md  PMID_40920748.md  PMID_41343683.md  PMID_41543249.md  doi_10.1038_s41467-020-17612-8.json  pmid_32753581.txt
scripts/: GTDB_INTEGRATION_GUIDE.md  INTEGRATION_GUIDE.md  KGM_STRAIN_LOOKUP_README.md  README.md  add_category_fields.py  add_evidence_source.py  analyze_literature_report.py  analyze_review_cases.py  apply_pmc_conversions.py  apply_strain_designations.py  apply_suggested_fixes.py  apply_suggested_snippets.py  apply_taxonomy_corrections.py  batch_snippet_fixer.py  compare_ncbi_gtdb_taxonomy.py  curate_evidence_with_pdfs.py  enhance_strain_data.py  extract_evidence_snippets.py  fix_invalid_snippets.py  fix_reference_formats.py  gtdb_demo.py  gtdb_integration.py  handle_special_references.py  intelligent_snippet_fixer.py  kgm_strain_lookup.py  quick_literature_review.py  remove_category_fields.py  review_literature.py  test_pdf_fetching.py  validate_ncbitaxon_ids.py
tests/: test_datamodel.py
(+148 files in other folders)
